add operators